# powerlifting-records-api

./: .env.example  Cargo.toml  Makefile  README.md  schema.sql
.github/workflows/: deploy.yml
src/: api.rs  build.rs  db.rs  main.rs
