[package]
name = "fpo-records-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
csv = "1.3.1"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
